[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scenes/MainScenes/Audio.gd" type="Script" id=1]
[ext_resource path="res://Resources/Audio/FX/UI_Change_Selection.wav" type="AudioStream" id=2]
[ext_resource path="res://Resources/Fonts/public-pixel-font/PublicPixel-eZPz6.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Resources/Textures/LightTRansparetn.png" type="Texture" id=4]
[ext_resource path="res://Scripts/UI/MenuButton.gd" type="Script" id=5]
[ext_resource path="res://Scripts/UI/CustomizePage.gd" type="Script" id=6]
[ext_resource path="res://Resources/Textures/Environment/background.png" type="Texture" id=7]
[ext_resource path="res://Resources/Textures/FX/PlayerLight.png" type="Texture" id=8]
[ext_resource path="res://Scenes/HelperScenes/UI/StoreSkillPanel.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/HelperScenes/UI/StoreEqupmentPanel.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scripts/UI/StoreColorPanel.gd" type="Script" id=11]
[ext_resource path="res://Resources/Textures/Items/point.png" type="Texture" id=12]
[ext_resource path="res://Resources/Audio/Music/Space Battle.wav" type="AudioStream" id=13]

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 100, 25.021, 1 )
flag_disable_z = true
direction = Vector3( -7.829, 0, 0 )
spread = 138.1
gravity = Vector3( -1500, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 1.0
scale = 3.0
scale_random = 1.0

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[node name="CustomizePage" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
position = Vector2( -279, -183 )
scale = Vector2( 15.0703, 8.64844 )
texture = ExtResource( 7 )
centered = false

[node name="UI" type="Node2D" parent="."]
position = Vector2( 482, 406 )

[node name="Panels" type="Node2D" parent="UI"]

[node name="StoreSkillPanel8" parent="UI/Panels" instance=ExtResource( 10 )]
position = Vector2( 1, 1205 )
title = "Player Type"
setting_name = "player_type"
images = [ "res://Resources/Textures/Entities/Player1.png", "res://Resources/Textures/Entities/Player2.png", "res://Resources/Textures/Entities/Player3.png", "res://Resources/Textures/Entities/player4.png", "res://Resources/Textures/Entities/player5.png" ]
names = [ "Standard", "Laser-er", "Gunner", "Bomber", "Speeder" ]
locked_settings = [ "player1_is_unlocked", "player2_is_unlocked", "player3_is_unlocked", "player4_is_unlocked", "player5_is_unlocked" ]

[node name="StoreSkillPanel9" parent="UI/Panels" instance=ExtResource( 10 )]
position = Vector2( -3, 1376 )
title = "Pellet Type"
setting_name = "bullet_type"
images = [ "res://Resources/Textures/Items/bullet-pixel.png", "res://Resources/Textures/Items/bullet-pixel2.png", "res://Resources/Textures/Items/bullet-pixel3.png", "res://Resources/Textures/Items/bullet-pixel4.png" ]
names = [ "Piercing", "Target-Seeking", "Heavy", "Scatter" ]
locked_settings = [ "bullet1_is_unlocked", "bullet2_is_unlocked", "bullet3_is_unlocked", "bullet4_is_unlocked" ]

[node name="StoreSkillPanel10" parent="UI/Panels" instance=ExtResource( 10 )]
position = Vector2( -3, 1376 )
script = ExtResource( 11 )
title = "Mono-col. Color"

[node name="Sprite2" type="Sprite" parent="UI/Panels/StoreSkillPanel10"]
visible = false
position = Vector2( -55, -66 )
scale = Vector2( 1.26829, 0.414633 )
texture = ExtResource( 12 )

[node name="StoreSkillPanel6" parent="UI/Panels" instance=ExtResource( 9 )]
position = Vector2( -4, 863 )
title = "Player Light Scale"
setting_name = "light_scale"
default_price = 5.0
max_val = 2.0

[node name="StoreSkillPanel5" parent="UI/Panels" instance=ExtResource( 9 )]
modulate = Color( 1, 0.698039, 0.345098, 1 )
position = Vector2( -1, 689 )
title = "Powerup Time Scale"
setting_name = "powerup_time_scale"
default_price = 1.0
max_val = 1.51

[node name="StoreSkillPanel4" parent="UI/Panels" instance=ExtResource( 9 )]
modulate = Color( 0.266667, 1, 0, 1 )
position = Vector2( -1, 339 )
title = "Additional Starting Health"
setting_name = "starting_health_mod"
default_price = 100.0
price_mult = 5.0
val_step = 1.0
max_val = 2.1

[node name="StoreSkillPanel" parent="UI/Panels" instance=ExtResource( 9 )]
modulate = Color( 0.996078, 0.262745, 0.262745, 1 )
title = "Additional Pellets Per Burst"
setting_name = "default_bullets_per_burst_mod"
default_price = 5.0
price_mult = 3.0
val_step = 1.0
max_val = 5.1

[node name="StoreSkillPanel3" parent="UI/Panels" instance=ExtResource( 9 )]
modulate = Color( 1, 0.588235, 0.588235, 1 )
position = Vector2( -1, 170 )
title = "Pellet Burst Speed Scale"
setting_name = "bullet_burst_speed_scale"
default_price = 4.0
price_mult = 3.0
val_step = 0.2
max_val = 2.1

[node name="StoreSkillPanel2" parent="UI/Panels" instance=ExtResource( 9 )]
modulate = Color( 0.501961, 1, 0.658824, 1 )
position = Vector2( 1, 509 )
title = "Bomb Size Multiplier"
setting_name = "bomb_scale"
default_price = 8.0
price_mult = 3.0
val_step = 0.25
max_val = 2.1

[node name="StoreSkillPanel7" parent="UI/Panels" instance=ExtResource( 9 )]
modulate = Color( 0, 0.882353, 1, 1 )
position = Vector2( -2, 1027 )
title = "Laser Damage Scale"
setting_name = "laser_damage_scale"
default_price = 20.0
price_mult = 4.0
val_step = 0.25
max_val = 1.6

[node name="Background3" type="Sprite" parent="UI"]
modulate = Color( 0.0823529, 0.0823529, 0.0823529, 0.780392 )
position = Vector2( -769, 25 )
scale = Vector2( 15.0937, 3.34375 )
texture = ExtResource( 7 )
centered = false

[node name="Background2" type="Sprite" parent="UI"]
modulate = Color( 0.0823529, 0.0823529, 0.0823529, 0.780392 )
position = Vector2( -761, -589 )
scale = Vector2( 15.0937, 3.34375 )
texture = ExtResource( 7 )
centered = false

[node name="BackButton" type="Button" parent="UI"]
margin_left = 569.0
margin_top = 218.0
margin_right = 741.0
margin_bottom = 264.0
custom_fonts/font = SubResource( 6 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
text = "Back"
flat = true
script = ExtResource( 5 )
right_margin_mod_on_hover = -50
button_index = 6
button_shift_index = 5

[node name="Light2D" type="Light2D" parent="UI/BackButton"]
visible = false
position = Vector2( 139, 28.5 )
scale = Vector2( 0.782, 0.091 )
texture = ExtResource( 4 )
energy = 3.0

[node name="Particles2D" type="Particles2D" parent="UI/BackButton"]
visible = false
position = Vector2( 60, 28 )
rotation = 3.14159
scale = Vector2( 1, 1.091 )
amount = 20
lifetime = 1.5
process_material = SubResource( 3 )

[node name="ResetButton" type="Button" parent="UI"]
margin_left = 546.0
margin_top = 102.0
margin_right = 758.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 6 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
text = "Reset"
flat = true
script = ExtResource( 5 )
right_margin_mod_on_hover = -50
button_index = 6
button_shift_index = 5

[node name="Light2D" type="Light2D" parent="UI/ResetButton"]
visible = false
position = Vector2( 139, 28.5 )
scale = Vector2( 0.782, 0.091 )
texture = ExtResource( 4 )
energy = 3.0

[node name="Particles2D" type="Particles2D" parent="UI/ResetButton"]
visible = false
position = Vector2( 60, 28 )
rotation = 3.14159
scale = Vector2( 1, 1.091 )
amount = 20
lifetime = 1.5
process_material = SubResource( 3 )

[node name="AddTokensButton" type="Button" parent="UI"]
margin_left = 363.0
margin_top = 160.0
margin_right = 775.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 6 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
text = "Add Points"
flat = true
script = ExtResource( 5 )
right_margin_mod_on_hover = -50
button_index = 6
button_shift_index = 5

[node name="Light2D" type="Light2D" parent="UI/AddTokensButton"]
visible = false
position = Vector2( 139, 28.5 )
scale = Vector2( 0.782, 0.091 )
texture = ExtResource( 4 )
energy = 3.0

[node name="Particles2D" type="Particles2D" parent="UI/AddTokensButton"]
visible = false
position = Vector2( 60, 28 )
rotation = 3.14159
scale = Vector2( 1, 1.091 )
amount = 20
lifetime = 1.5
process_material = SubResource( 3 )

[node name="StoreLabel" type="Label" parent="."]
margin_left = 56.0
margin_top = 66.0
margin_right = 360.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 4 )
text = "LOADOUT"

[node name="TokensLabel" type="Label" parent="."]
margin_left = 718.0
margin_top = 89.0
margin_right = 958.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 5 )
text = "Tokens: "

[node name="NextPanelButton" type="Button" parent="."]
margin_left = 39.0
margin_top = 460.0
margin_right = 838.0
margin_bottom = 696.0
focus_mode = 0
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
flat = true

[node name="LastPanelButton" type="Button" parent="."]
margin_left = 49.0
margin_top = 10.0
margin_right = 848.0
margin_bottom = 268.0
focus_mode = 0
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
flat = true

[node name="SelectAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
pitch_scale = 0.7
script = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 517.75, 113 )
scale = Vector2( 2.44125, 0.46 )
texture = ExtResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
autoplay = true
script = ExtResource( 1 )
is_music = true

[connection signal="mouse_entered" from="UI/BackButton" to="UI/BackButton" method="mouse_entered"]
[connection signal="mouse_exited" from="UI/BackButton" to="UI/BackButton" method="mouse_exited"]
[connection signal="pressed" from="UI/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="mouse_entered" from="UI/ResetButton" to="UI/ResetButton" method="mouse_entered"]
[connection signal="mouse_exited" from="UI/ResetButton" to="UI/ResetButton" method="mouse_exited"]
[connection signal="pressed" from="UI/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="mouse_entered" from="UI/AddTokensButton" to="UI/AddTokensButton" method="mouse_entered"]
[connection signal="mouse_exited" from="UI/AddTokensButton" to="UI/AddTokensButton" method="mouse_exited"]
[connection signal="pressed" from="UI/AddTokensButton" to="." method="_on_AddTokensButton_pressed"]
[connection signal="pressed" from="NextPanelButton" to="." method="_on_NextPanelButton_pressed"]
[connection signal="pressed" from="LastPanelButton" to="." method="_on_LastPanelButton_pressed"]
